[package]
name = "deno-pal"
description = "Deno's best pal"
version = "1.0.0-alpha"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/olanod/deno-pal"

[dependencies]
structopt = { version = "0.3", features = ["paw"] }
paw = "1.0"
serde_json = "1.0"
async-std = { version = "1.6", features = ["attributes"] }

[[bin]]
name = "dp"
path = "src/main.rs"
