[package]
name = "deno-pal"
description = "Deno's best pal"
version = "1.0.0-alpha"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/olanod/deno-pal"

[dependencies]
serde_json = "1.0"
clap = "2.33.1"
log = "0.4.8"
url = "2.1.1"
lazy_static = "1.4.0"
which = "4.0.1"
anyhow = "1.0.31"

[[bin]]
name = "dp"
path = "src/main.rs"
